--- a/src/app/paginated-view/paginated-view.component.html
+++ b/src/app/paginated-view/paginated-view.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="paginated-view" #paginatedView></div>
 
-<ng-container *ngFor="let page of [0,1,2,3,4,5,6,7,8,9,10]">
+<ng-container *ngFor="let page of pages$ | async">
 	<div #pageHeader class="page-header">Header</div>
 	<div #pageFooter class="page-footer">Footer</div>
 </ng-container>
